feat: Task 2 is complete.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         }
 
         button {
+            height: 100px;
             display: block;
             margin: 30px 10px 0;
             padding: 15px 25px;
@@ -38,7 +39,7 @@
         .menu {
             margin-top: 50px;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
             width: 30%;
         }
@@ -49,7 +50,7 @@
     <h1>Чепрасов Иван P4110</h1>
     <div class="menu">
         <button onclick="window.location.href='math-ml-result.html'">Задание 1</button>
-        <button onclick="window.location.href='rgb.xml'">Задание 2</button>
+        <button onclick="window.location.href='svg-result.html'">Задание 2</button>
     </div>
 </div>
 </body>
